--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -38,7 +38,7 @@ import Layout from "@/layouts/Layout.astro";
 			<span
 				><A
 					href="mailto:naparajith@duck.com"
-					title={"Email - naparajith@duck.com"}
+					title="Email - naparajith@duck.com"
 				>
 					Email</A
 				>
@@ -53,18 +53,12 @@ import Layout from "@/layouts/Layout.astro";
 				</A>
 			</span>
 			<span>
-				<A
-					href={"https://github.com/DrInfinite"}
-					title={`GitHub - DrInfinite`}
-					target="_blank"
-				>
-					GitHub
-				</A>
+				<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
 			</span>
 			<span>
 				<A
-					href={"https://bsky.app/profile/naparajith.in"}
-					title={`Naparajith | DrInfinite (@naparajith.in)`}
+					href="https://bsky.app/profile/naparajith.in"
+					title="Naparajith | DrInfinite (@naparajith.in)"
 					target="_blank"
 				>
 					BlueSky
@@ -76,7 +70,7 @@ import Layout from "@/layouts/Layout.astro";
 			<details>
 				<summary>Open PGP Public Key</summary><p>
 					This is my official and only OpenPGP key associated with my email.
-				</p><A href="/open-pgp-public-key.txt" target={"_blank"}
+				</p><A href="/open-pgp-public-key.txt" target="_blank"
 					>View Active OpenPGP Public Key.</A
 				>
 			</details>
@@ -88,7 +82,7 @@ import Layout from "@/layouts/Layout.astro";
 					</b>. Any other profile using my name is not to be trusted.
 				</p><A
 					href="https://atproto-browser.vercel.app/at/did:plc:pe7w7pdxibmhd5fgkur5oms3"
-					target={"_blank"}>Verify my Profile in At Proto Explorer</A
+					target="_blank">Verify my Profile in At Proto Explorer</A
 				>
 			</details>
 
