--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,13 +59,13 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 		>
 			<span class="-my-px ~size-48/96">
 				<Image
-					alt={"DrInfinite"}
+					alt="DrInfinite"
 					class="mx-auto scale-90 ~rounded-none/xl"
 					width={540}
 					height={540}
-					decoding={"async"}
-					loading={"eager"}
-					src={"https://avatars.githubusercontent.com/u/74095696?v=4"}
+					decoding="async"
+					loading="eager"
+					src="https://avatars.githubusercontent.com/u/74095696?v=4"
 				/>
 			</span>
 
@@ -94,13 +94,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 		<A href="/contact" title="Contact"> Contact </A>
 		<A href="/blog" title="Blog">Blog</A>
 		<!-- <A href="/quotes" title="Quotes">Quotes</A> -->
-		<A
-			href={"https://github.com/DrInfinite"}
-			title={`GitHub - DrInfinite`}
-			target="_blank"
-		>
-			GitHub
-		</A>
+		<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
 		<A
 			href="https://www.linkedin.com/in/naparajith/"
 			title="LinkedIn - Naparajith T L"
@@ -109,8 +103,8 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 			LinkedIn
 		</A>
 		<A
-			href={"https://bsky.app/profile/naparajith.in"}
-			title={`Naparajith | DrInfinite (@naparajith.in)`}
+			href="https://bsky.app/profile/naparajith.in"
+			title="Naparajith | DrInfinite (@naparajith.in)"
 			target="_blank"
 		>
 			BlueSky
@@ -121,7 +115,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 			<A
 				href="https://flowcv.com/resume/mdrssqq018"
 				title="Resume"
-				target={"_blank"}
+				target="_blank"
 			>
 				Resume: Download latest version
 			</A>
