--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -182,23 +182,17 @@ const translations = [
 				</A>
 			</span>
 			<span>
-				<A
-					href={"https://github.com/DrInfinite"}
-					title={`GitHub - DrInfinite`}
-					target="_blank"
-				>
-					GitHub
-				</A>
+				<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
 			</span>
 			<span>
-				<A href={"/quick-view/leetcode"} title={`LeetCode`} target="_blank">
+				<A href="/quick-view/leetcode" title="LeetCode" target="_blank">
 					LeetCode
 				</A>
 			</span>
 			<span>
 				<A
-					href={"https://bsky.app/profile/naparajith.in"}
-					title={`Naparajith | DrInfinite (@naparajith.in)`}
+					href="https://bsky.app/profile/naparajith.in"
+					title="Naparajith | DrInfinite (@naparajith.in)"
 					target="_blank"
 				>
 					BlueSky
