--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -30,7 +30,7 @@ import Layout from "@/layouts/Layout.astro";
 >
 	<div class="flex h-[60vh] flex-col place-content-center gap-4">
 		<h3 class="text-center">
-			404 | The Page you are looking for has moved or doesn't exist ;(
+			404 | the page you are looking for has moved or doesn't exist ;(
 		</h3>
 		<p class="text-justify">
 			Try looking for another page or, go home to start over. Sorry for any
