--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -27,7 +27,7 @@ import Layout from "@/layouts/Layout.astro";
 <Layout title="500" description="there was an unknown server-side error">
 	<div class="flex h-[60vh] flex-col place-content-center gap-4">
 		<h3 class="text-center">
-			500 | The Server randomly decided to stop working ;(
+			500 | the server randomly decided to stop working ;(
 		</h3>
 		<p class="text-justify">
 			Try reloading the page or, go home to start over. Sorry for any
