--- a/src/components/quick-view/LeetcodeCard.astro
+++ b/src/components/quick-view/LeetcodeCard.astro
@@ -15,15 +15,24 @@ const leetcode = await LeetcodeProfile();
 		<small class="font-normal">
 			<u class="block md:hidden">Last Solved</u>
 			<u class="hidden md:inline">Last Solved:</u>
-			<strong
-				>{
-					new Date(
-						parseInt(leetcode.recentSubmissionList?.at(0)?.timestamp!) * 1000,
-					)
-						.toDateString()
-						.slice(4, 10)
-				}</strong
-			>
+			<strong>
+				{
+					process.env.NODE_ENV === "development"
+						? new Date(
+								parseInt(leetcode.recentSubmissionList?.at(0)?.timestamp!) *
+									1000,
+							)
+								.toDateString()
+								.slice(4, 10)
+						: new Date(
+								(parseInt(leetcode.recentSubmissionList?.at(0)?.timestamp!) +
+									19800) *
+									1000,
+							)
+								.toDateString()
+								.slice(4, 10)
+				}
+			</strong>
 		</small>
 	</span>
 </ACard>
