--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -9,8 +9,7 @@
  * it under the terms of the GNU Affero General Public License Version 3 as published
  * by the Free Software Foundation.
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU Affero General Public License for more details.
  *
@@ -71,7 +70,7 @@ const postImage = await getImage({ src: post.data.image, format: "webp" });
 			/>
 			<p>{author.data.name}</p>
 			<small
-				class="bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
+				class="bg-gradient-to-br from-[#1e57b7] to-[#4762f4] bg-clip-text text-transparent"
 			>
 				{author.data.occupation}
 			</small>
