--- a/src/pages/quick-view/github.astro
+++ b/src/pages/quick-view/github.astro
@@ -75,7 +75,7 @@ const result = await GithubRepositories();
 						<h4 class="-my-px truncate" transition:name="post-title">
 							{repo.name}
 						</h4>
-						<small class="bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent">
+						<small class="bg-gradient-to-r from-[#1e57b7] to-[#4762f4] bg-clip-text text-transparent">
 							{repo.language}
 						</small>
 					</article>
