--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -87,7 +87,7 @@ const blog = await getCollection("blog");
 					<span class="flex flex-col">
 						Blog
 						<div
-							class="h-[2px] bg-gradient-to-r from-[#d83333] to-[#f041ff] transition-all duration-300 ~my-0/2"
+							class="h-[2px] bg-gradient-to-r from-[#1e57b7] to-[#4762f4] transition-all duration-300 ~my-0/2"
 						>
 						</div>
 						<small class="font-normal">
