--- a/src/pages/quick-view/leetcode.astro
+++ b/src/pages/quick-view/leetcode.astro
@@ -131,7 +131,7 @@ const leetcode = await LeetcodeProfile();
 					<h4 class="-my-px truncate" transition:name="post-title">
 						{sub.title}
 					</h4>
-					<small class="bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent">
+					<small class="bg-gradient-to-r from-[#1e57b7] to-[#4762f4] bg-clip-text text-transparent">
 						{sub.lang}
 					</small>
 				</article>
