--- a/src/components/quick-view/GitHubCard.astro
+++ b/src/components/quick-view/GitHubCard.astro
@@ -30,7 +30,7 @@ const updated_at = new Date((await GithubProfile()).updated_at).toDateString();
 	<span class="flex flex-col">
 		GitHub
 		<div
-			class="h-[2px] bg-gradient-to-r from-[#d83333] to-[#f041ff] transition-all duration-300 ~my-0/2"
+			class="h-[2px] bg-gradient-to-r from-[#1e57b7] to-[#4762f4] transition-all duration-300 ~my-0/2"
 		>
 		</div>
 		<small class="font-normal">
