--- a/src/components/quick-view/LeetcodeCard.astro
+++ b/src/components/quick-view/LeetcodeCard.astro
@@ -9,7 +9,7 @@ const leetcode = await LeetcodeProfile();
 	<span class="flex flex-col">
 		LeetCode
 		<div
-			class="h-[2px] bg-gradient-to-r from-[#d83333] to-[#f041ff] transition-all duration-300 ~my-0/2"
+			class="h-[2px] bg-gradient-to-r from-[#1e57b7] to-[#4762f4] transition-all duration-300 ~my-0/2"
 		>
 		</div>
 		<small class="font-normal">
