--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,7 @@
  * it under the terms of the GNU Affero General Public License Version 3 as published
  * by the Free Software Foundation.
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU Affero General Public License for more details.
  *
@@ -158,7 +157,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 			<!-- 		</small> -->
 			<!-- 	</article> -->
 			<!-- 	<article -->
-			<!-- 		class="flex justify-between bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent ~p-2/4" -->
+			<!-- 		class="flex justify-between bg-gradient-to-br from-[#1e57b7] to-[#4762f4] bg-clip-text text-transparent ~p-2/4" -->
 			<!-- 	> -->
 			<!-- 		<small>{post.data.created.toDateString()}</small> -->
 			<!-- 		<small>{author.data.name}</small> -->
