--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,8 +62,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 					class="mx-auto scale-90 ~rounded-none/xl"
 					width={540}
 					height={540}
-					decoding="async"
-					loading="eager"
+					priority
 					src="https://avatars.githubusercontent.com/u/74095696?v=4"
 				/>
 			</span>
