--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -46,8 +46,7 @@ const blog = await getCollection("blog");
 					class="mx-auto ~rounded-none/xl"
 					width={540}
 					height={540}
-					decoding={"async"}
-					loading={"eager"}
+					priority
 					src={"https://avatars.githubusercontent.com/u/74095696?v=4"}
 				/>
 			</span>
