--- a/src/pages/quick-view/leetcode.astro
+++ b/src/pages/quick-view/leetcode.astro
@@ -51,8 +51,7 @@ const leetcode = await LeetcodeProfile();
 						alt={badge.displayName}
 						width={96}
 						height={96}
-						decoding={"async"}
-						loading={"eager"}
+						priority
 					/>
 				</span>
 			))
