--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -50,9 +50,8 @@ posts = posts.filter((acc) => acc.data.draft !== true);
 							inferSize
 							width={1920}
 							height={1080}
-							decoding={"async"}
-							loading={"eager"}
-							class="-my-px aspect-video w-full border border-border ~rounded-none/xl"
+							priority
+							class="-my-px aspect-video border border-border ~rounded-none/xl"
 							transition:name="image"
 						/>
 					</div>
