fix: updated title and description

--- a/src/pages/quick-view/github.astro
+++ b/src/pages/quick-view/github.astro
@@ -30,8 +30,8 @@ const result = await GithubRepositories();
 ---
 
 <Layout
-	title="Leetcode"
-	description="A quick overview of my leetcode stats, directly from the source"
+	title="GitHub"
+	description="A quick overview of my GitHub stats, directly from the source"
 >
 	<main>
 		<span class="flex flex-row items-center justify-center ~gap-4/8">
