--- a/src/pages/quick-view/leetcode.astro
+++ b/src/pages/quick-view/leetcode.astro
@@ -32,7 +32,7 @@ const leetcode = await LeetcodeProfile();
 
 <Layout
 	title="Leetcode"
-	description="A quick overview of my leetcode stats, directly from the source"
+	description="A quick overview of my Leetcode stats, directly from the source"
 >
 	<A
 		href={"https://leetcode.com/u/DrInfinite/"}
