--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,11 +21,13 @@
  */
 
 import A from "@/components/A.astro";
+
+const year = new Date().getFullYear();
 ---
 
 <footer class="border-t border-border py-4 ~my-4/8" transition:persist>
 	<p class="text-pretty text-center ~space-x-2/4">
-		&copy; 2025 by <A
+		&copy; {year} by <A
 			rel="cc:attributionURL dct:creator"
 			property="cc:attributionName"
 			href="https://www.linkedin.com/in/naparajith/"
