--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -33,7 +33,7 @@ import Layout from "@/layouts/Layout.astro";
 		<p>Get in touch with me through one of the methods mentioned below.</p>
 
 		<div
-			class="flex flex-wrap justify-evenly border border-border ~mb-2/4 ~gap-2/4 ~rounded-none/xl ~p-4/8"
+			class="flex flex-wrap justify-evenly rounded-none border border-border ~mb-2/4 ~gap-2/4 ~p-4/8"
 		>
 			<span
 				><A
