--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 			<span class="-my-px ~size-48/96">
 				<Image
 					alt="DrInfinite"
-					class="mx-auto scale-90 ~rounded-none/xl"
+					class="mx-auto scale-90 rounded-none"
 					width={540}
 					height={540}
 					priority
@@ -85,7 +85,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 	</article>
 
 	<div
-		class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
+		class="flex flex-wrap justify-evenly rounded-none border border-border ~gap-2/4 ~p-2/4"
 	>
 		<A href="/profile" title="Profile">Profile</A>
 		<A href="/quick-view" title="Quick View"> Quick View </A>
@@ -122,7 +122,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 			<hr class="my-4 border-t-2 border-t-border" />
 			<h2>A random quote that I like</h2>
 			<figure
-				class="place-content-center border border-border p-4 ~gap-2/4 ~rounded-none/xl"
+				class="place-content-center rounded-none border border-border p-4 ~gap-2/4"
 			>
 				<blockquote cite={quote.data.cite}>{quote.data.quote}</blockquote>
 				<figcaption>
@@ -145,7 +145,7 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 			<!-- <h2>A random blog post</h2> -->
 			<!-- <a -->
 			<!-- 	href={`/blog/${post.id}`} -->
-			<!-- 	class="flex w-full flex-col justify-evenly border border-border decoration-transparent ~rounded-none/xl hover:bg-foreground/10" -->
+			<!-- 	class="flex w-full flex-col justify-evenly border border-border decoration-transparent rounded-none hover:bg-foreground/10" -->
 			<!-- > -->
 			<!-- 	<article class="flex flex-col ~gap-2/4 ~p-2/4"> -->
 			<!-- 		<h4 class="-my-px" transition:name="post-title"> -->
