--- a/src/pages/policy/index.astro
+++ b/src/pages/policy/index.astro
@@ -46,7 +46,7 @@ const policies = await getCollection("policy");
 			site.
 		</p>
 		<div
-			class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
+			class="flex flex-wrap justify-evenly rounded-none border border-border ~gap-2/4 ~p-2/4"
 		>
 			{
 				policies.map((policy) => (
