--- a/src/pages/profile/[slug].astro
+++ b/src/pages/profile/[slug].astro
@@ -44,3 +44,9 @@ const { Content } = await render(about);
 		<Content />
 	</main>
 </Layout>
+
+<style>
+	h2 {
+		@apply bg-gradient-to-r from-[#1e57b7] to-[#4762f4] bg-clip-text text-transparent;
+	}
+</style>
