--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -61,7 +61,7 @@ const translations = [
 		</p>
 
 		<div
-			class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
+			class="flex flex-wrap justify-evenly rounded-none border border-border ~gap-2/4 ~p-2/4"
 		>
 			{
 				profile.map((about) => (
@@ -170,7 +170,7 @@ const translations = [
 		</p>
 
 		<div
-			class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
+			class="flex flex-wrap justify-evenly rounded-none border border-border ~gap-2/4 ~p-2/4"
 		>
 			<span>
 				<A
