--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -43,7 +43,7 @@ const blog = await getCollection("blog");
 			<span class="~size-32/64">
 				<Image
 					alt={"DrInfinite"}
-					class="mx-auto ~rounded-none/xl"
+					class="mx-auto rounded-none"
 					width={540}
 					height={540}
 					priority
