--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,11 +82,15 @@
 	}
 
 	button {
-		@apply rounded-full border border-border bg-secondary font-semibold text-primary-foreground ~px-2/4 ~py-1/2 hover:bg-secondary/80;
+		@apply rounded-none border border-border bg-secondary font-semibold text-primary-foreground ~px-2/4 ~py-1/2 hover:bg-secondary/80;
 	}
 
 	p {
 		@apply text-pretty text-justify;
+	}
+
+	code {
+		@apply text-primary;
 	}
 
 	a,
