--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -56,7 +56,7 @@ const postImage = await getImage({ src: post.data.image, format: "webp" });
 			href={author.data.social}
 			target="_blank"
 			title={author.data.name}
-			class="flex flex-row items-center justify-center border border-border no-underline ~-my-2/4 ~gap-2/4 ~rounded-none/xl hover:bg-foreground/10"
+			class="flex flex-row items-center justify-center rounded-none border border-border no-underline ~-my-2/4 ~gap-2/4 hover:bg-foreground/10"
 		>
 			<Image
 				src={author.data.image}
@@ -75,7 +75,7 @@ const postImage = await getImage({ src: post.data.image, format: "webp" });
 			</small>
 		</a>
 		<div
-			class="flex flex-row flex-wrap justify-between border border-border ~-mb-2/4 ~rounded-none/xl ~px-4/8 ~py-2/4"
+			class="flex flex-row flex-wrap justify-between rounded-none border border-border ~-mb-2/4 ~px-4/8 ~py-2/4"
 		>
 			<strong>{remarkPluginFrontmatter.minutesRead}</strong>
 			<strong>{post.data.created.toDateString().slice(4)}</strong>
@@ -91,7 +91,7 @@ const postImage = await getImage({ src: post.data.image, format: "webp" });
 			height="1080"
 			formats={["webp", "avif"]}
 			priority
-			class="aspect-video border border-border ~rounded-none/xl"
+			class="aspect-video rounded-none border border-border"
 			transition:name="image"
 		/>
 		<figcaption class="bg-background text-center text-foreground">
