--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -32,41 +32,41 @@ import Layout from "@/layouts/Layout.astro";
 		<h2>Contact</h2>
 		<p>Get in touch with me through one of the methods mentioned below.</p>
 
-		<div
-			class="flex flex-wrap justify-evenly rounded-none border border-border ~mb-2/4 ~gap-2/4 ~p-4/8"
-		>
-			<span
-				><A
-					href="mailto:naparajith@duck.com"
-					title="Email - naparajith@duck.com"
-				>
-					Email</A
-				>
-			</span>
-			<span>
-				<A
-					href="https://www.linkedin.com/in/naparajith/"
-					title="LinkedIn - Naparajith T L"
-					target="_blank"
-				>
-					LinkedIn
-				</A>
-			</span>
-			<span>
-				<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
-			</span>
-			<span>
-				<A
-					href="https://bsky.app/profile/naparajith.in"
-					title="Naparajith | DrInfinite (@naparajith.in)"
-					target="_blank"
-				>
-					BlueSky
-				</A>
-			</span>
-		</div>
-
 		<div class="flex flex-col ~gap-2/4">
+			<div
+				class="flex flex-wrap justify-evenly rounded-none border border-border ~gap-2/4 ~p-2/4"
+			>
+				<span
+					><A
+						href="mailto:naparajith@duck.com"
+						title="Email - naparajith@duck.com"
+					>
+						Email</A
+					>
+				</span>
+				<span>
+					<A
+						href="https://www.linkedin.com/in/naparajith/"
+						title="LinkedIn - Naparajith T L"
+						target="_blank"
+					>
+						LinkedIn
+					</A>
+				</span>
+				<span>
+					<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
+				</span>
+				<span>
+					<A
+						href="https://bsky.app/profile/naparajith.in"
+						title="Naparajith | DrInfinite (@naparajith.in)"
+						target="_blank"
+					>
+						BlueSky
+					</A>
+				</span>
+			</div>
+
 			<details>
 				<summary>Open PGP Public Key</summary><p>
 					This is my official and only OpenPGP key associated with my email.
