--- a/src/pages/policy/[slug].astro
+++ b/src/pages/policy/[slug].astro
@@ -44,7 +44,7 @@ const { Content } = await render(policy);
 			Last updated on <strong>{policy.data.updated?.toDateString()}</strong>
 		</p>
 	</div>
-	<article class="font-serif">
+	<article>
 		<Content />
 	</article>
 </Layout>
