--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ import Button from "./Button.astro";
 <header
 	class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4"
 >
-	<h3 class="text-start">
+	<h3 class="text-start font-sans">
 		~/{
 			Astro.url.pathname.startsWith("/blog") ||
 			Astro.url.pathname.startsWith("/quotes")
