fix: content updates

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -198,6 +198,7 @@ const translations = [
 					BlueSky
 				</A>
 			</span>
+			<span><A href="/contact" title="Contact">Contact</A></span>
 			<span><A href="/blog" title="Blog">Blog</A></span>
 			<span>
 				<A href="/quotes" title="Portfolio - Quotes">Quotes</A>
