--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -69,7 +69,7 @@ import Layout from "@/layouts/Layout.astro";
 
 			<details>
 				<summary>Open PGP Public Key</summary><p>
-					This is my official and only OpenPGP key associated with my email.
+					This is my official and the only OpenPGP key associated with my email.
 				</p><A href="/open-pgp-public-key.txt" target="_blank"
 					>View Active OpenPGP Public Key.</A
 				>
