style: font and spacing updates

--- a/src/pages/quick-view/github.astro
+++ b/src/pages/quick-view/github.astro
@@ -72,7 +72,7 @@ const result = await GithubRepositories();
 					target="_blank"
 				>
 					<article class="flex flex-col justify-between ~gap-2/4 ~p-2/4 md:flex-row">
-						<h4 class="-my-px truncate" transition:name="post-title">
+						<h4 class="-my-px truncate font-sans" transition:name="post-title">
 							{repo.name}
 						</h4>
 						<small class="bg-gradient-to-r from-[#1e57b7] to-[#4762f4] bg-clip-text text-transparent">
