--- a/src/components/ACard.astro
+++ b/src/components/ACard.astro
@@ -26,7 +26,7 @@ const { href, title, target, ...props } = Astro.props;
 ---
 
 <a
-	class="place-self-center rounded-none border border-border no-underline ~p-2/8 hover:bg-foreground/10 active:bg-foreground active:text-background"
+	class="w-full place-self-center rounded-none border border-border no-underline ~p-2/8 hover:bg-foreground/10 active:bg-foreground active:text-background"
 	href={href}
 	title={title}
 	target={target}
