--- a/src/components/quick-view/LeetcodeCard.astro
+++ b/src/components/quick-view/LeetcodeCard.astro
@@ -13,8 +13,7 @@ const leetcode = await LeetcodeProfile();
 		>
 		</div>
 		<small class="font-normal">
-			<u class="block md:hidden">Last Solved</u>
-			<u class="hidden md:inline">Last Solved:</u>
+			<u>Last Solved:</u>{" "}
 			<strong>
 				{
 					process.env.NODE_ENV === "development"
