fix: link target

--- a/src/components/quick-view/GitHubCard.astro
+++ b/src/components/quick-view/GitHubCard.astro
@@ -26,7 +26,7 @@ import { GithubProfile } from "@/actions/github-profile";
 const updated_at = new Date((await GithubProfile()).updated_at).toDateString();
 ---
 
-<ACard href="/quick-view/github" title="GitHub" class="group" target={"_blank"}>
+<ACard href="/quick-view/github" title="GitHub" class="group">
 	<span class="flex flex-col">
 		GitHub
 		<div
