chore: removed unnecessary brackets

--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -69,6 +69,8 @@ const blog = await getCollection("blog");
 				>
 					LinkedIn
 				</ACard>
+				<ACard href="/" title="Portfolio">Portfolio</ACard>
+				<ACard href="/contact" title="Contact">Contact</ACard>
 				<ACard
 					href={"https://bsky.app/profile/naparajith.in"}
 					title={`Naparajith | DrInfinite (@naparajith.in)`}
@@ -76,8 +78,6 @@ const blog = await getCollection("blog");
 				>
 					BlueSky
 				</ACard>
-				<ACard href="/" title="Portfolio">Portfolio</ACard>
-				<ACard href={"/contact"} title={"Contact"}>Contact</ACard>
 				<ACard href={"/quotes"}>Quotes</ACard>
 			</div>
 
