fix: added link title

--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -78,7 +78,7 @@ const blog = await getCollection("blog");
 				>
 					BlueSky
 				</ACard>
-				<ACard href={"/quotes"}>Quotes</ACard>
+				<ACard href="/quotes" title="Quotes">Quotes</ACard>
 			</div>
 
 			<div
