fix: add missing links

--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -78,6 +78,9 @@ const blog = await getCollection("blog");
 				>
 					BlueSky
 				</ACard>
+				<ACard href="/design" title="Design">Design</ACard>
+				<ACard href="/projects" title="Projects">Projects</ACard>
+				<ACard href="/tools" title="Simple Tools">Tools</ACard>
 				<ACard href="/quotes" title="Quotes">Quotes</ACard>
 			</div>
 
