fix: add missing links in home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,7 +91,10 @@ const quote = quotes[Math.floor(Math.random() * quotes.length)];
 		<A href="/quick-view" title="Quick View"> Quick View </A>
 		<A href="/contact" title="Contact"> Contact </A>
 		<A href="/blog" title="Blog">Blog</A>
-		<!-- <A href="/quotes" title="Quotes">Quotes</A> -->
+		<A href="/quotes" title="Quotes">Quotes</A>
+		<A href="/design" title="Design">Design</A>
+		<A href="/projects" title="Projects">Projects</A>
+		<A href="/tools" title="Tools">Tools</A>
 		<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
 		<A
 			href="https://www.linkedin.com/in/naparajith/"
