fix: dynamic quotes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,8 @@
  * Contact me through electronic mail: <naparajith@duck.com>
  */
 
+export const prerender = false;
+
 import A from "@/components/A.astro";
 import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
@@ -29,7 +31,7 @@ const learning = [
 	"How do memory-corruption vulnerabilities work?",
 	"Ethical exploitation of web applications",
 	"Building a programming language from scratch using LLVM",
-	"An in-depth explanation of how the hell a Syscall works",
+	"An in-depth explanation of how a Syscall works",
 	"An in-depth explanation of how to build Firefox extensions.",
 	"Reading a codebase without getting lost or stuck.",
 ];
