--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -36,6 +36,46 @@ const translations = [
 	{ lang: "Malayalam", name: "നപരാജിത്ത്" },
 	{ lang: "Punjabi", name: "ਨਪਰਾਜਿਤ" },
 ];
+
+const links = [
+	{
+		href: "https://www.linkedin.com/in/naparajith/",
+		title: "LinkedIn - Naparajith T L",
+		innerHTML: "LinkedIn",
+		target: "_blank",
+	},
+	{
+		href: "/quick-view/github",
+		title: "GitHub - DrInfinite",
+		innerHTML: "GitHub",
+	},
+	{
+		href: "/quick-view/leetcode",
+		title: "LeetCode",
+		innerHTML: "LeetCode",
+	},
+	{
+		href: "https://bsky.app/profile/naparajith.in",
+		title: "Naparajith | DrInfinite (@naparajith.in)",
+		innerHTML: "BlueSky",
+		target: "_blank",
+	},
+	{
+		href: "/contact",
+		title: "Contact",
+		innerHTML: "Contact",
+	},
+	{
+		href: "/blog",
+		title: "Blog",
+		innerHTML: "Blog",
+	},
+	{
+		href: "/quotes",
+		title: "Portfolio - Quotes",
+		innerHTML: "Quotes",
+	},
+];
 ---
 
 <Layout
@@ -172,37 +212,13 @@ const translations = [
 		<div
 			class="flex flex-wrap justify-evenly rounded-none border border-border ~gap-2/4 ~p-2/4"
 		>
-			<span>
-				<A
-					href="https://www.linkedin.com/in/naparajith/"
-					title="LinkedIn - Naparajith T L"
-					target="_blank"
-				>
-					LinkedIn
-				</A>
-			</span>
-			<span>
-				<A href="/quick-view/github" title="GitHub - DrInfinite"> GitHub </A>
-			</span>
-			<span>
-				<A href="/quick-view/leetcode" title="LeetCode" target="_blank">
-					LeetCode
-				</A>
-			</span>
-			<span>
-				<A
-					href="https://bsky.app/profile/naparajith.in"
-					title="Naparajith | DrInfinite (@naparajith.in)"
-					target="_blank"
-				>
-					BlueSky
-				</A>
-			</span>
-			<span><A href="/contact" title="Contact">Contact</A></span>
-			<span><A href="/blog" title="Blog">Blog</A></span>
-			<span>
-				<A href="/quotes" title="Portfolio - Quotes">Quotes</A>
-			</span>
+			{
+				links.map((link) => (
+					<A href={link.href} title={link.title} target={link.target}>
+						{link.innerHTML}
+					</A>
+				))
+			}
 		</div>
 	</article>
 </Layout>
