--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -30,6 +30,51 @@ import GitHubCard from "@/components/quick-view/GitHubCard.astro";
 import LeetcodeCard from "@/components/quick-view/LeetcodeCard.astro";
 
 const blog = await getCollection("blog");
+
+const cards = [
+	{
+		href: "https://www.linkedin.com/in/naparajith/",
+		title: "LinkedIn - Naparajith T L",
+		innerHTML: "LinkedIn",
+		target: "_blank",
+	},
+	{
+		href: "/",
+		title: "Portfolio",
+		innerHTML: "Portfolio",
+	},
+	{
+		href: "/contact",
+		title: "Contact",
+		innerHTML: "Contact",
+	},
+	{
+		href: "https://bsky.app/profile/naparajith.in",
+		title: "Naparajith | DrInfinite (@naparajith.in)",
+		innerHTML: "BlueSky",
+		target: "_blank",
+	},
+	{
+		href: "/design",
+		title: "Design",
+		innerHTML: "Design",
+	},
+	{
+		href: "/projects",
+		title: "Projects",
+		innerHTML: "Projects",
+	},
+	{
+		href: "/tools",
+		title: "Simple Tools",
+		innerHTML: "Tools",
+	},
+	{
+		href: "/quotes",
+		title: "Quotes",
+		innerHTML: "Quotes",
+	},
+];
 ---
 
 <Layout
@@ -62,26 +107,13 @@ const blog = await getCollection("blog");
 			<div
 				class="mx-auto grid w-full max-w-6xl grid-cols-2 gap-4 p-4 sm:grid-cols-3 md:grid-cols-4"
 			>
-				<ACard
-					href="https://www.linkedin.com/in/naparajith/"
-					title="LinkedIn - Naparajith T L"
-					target="_blank"
-				>
-					LinkedIn
-				</ACard>
-				<ACard href="/" title="Portfolio">Portfolio</ACard>
-				<ACard href="/contact" title="Contact">Contact</ACard>
-				<ACard
-					href={"https://bsky.app/profile/naparajith.in"}
-					title={`Naparajith | DrInfinite (@naparajith.in)`}
-					target="_blank"
-				>
-					BlueSky
-				</ACard>
-				<ACard href="/design" title="Design">Design</ACard>
-				<ACard href="/projects" title="Projects">Projects</ACard>
-				<ACard href="/tools" title="Simple Tools">Tools</ACard>
-				<ACard href="/quotes" title="Quotes">Quotes</ACard>
+				{
+					cards.map((card) => (
+						<ACard href={card.href} title={card.title} target={card.target}>
+							{card.innerHTML}
+						</ACard>
+					))
+				}
 			</div>
 
 			<div
